--- a/ccino.yml
+++ b/ccino.yml
@@ -31,11 +31,32 @@
 -
     # Test all other features given what has been tested above.
 
-    source: test
-    exclude:
-        - core/
-    reporter: default
-    out: test/out/report.txt
-    mirror: true
-    stdout: test/out/print.txt
-    stdout_mirror: true
+        source: test/core/test-primary.py
+        reporter: debug
+        bail: true
+        out: test/core/out/primary-report.txt
+        stdout: test/core/out/primary-print.txt
+    -
+        # Test the second section of basic functionality.
+        #
+        # These tests finishing testing all components needed to run the
+        # rest of the ccino tests. No tests after this point should use
+        # components not tested here.
+        #
+        # Only suite(), test(), and the debug reporter can be used from
+        # the primary tests.
+
+        source: test/core/test-secondary.py
+        reporter: debug
+        bail: true
+        out: test/core/out/secondary-report.txt
+        stdout: test/core/out/secondary-print.txt
+    -
+        # Test all other features given what has been tested above.
+
+        source: test
+        exclude:
+            - core/**
+        reporter: default
+        out: test/out/report.txt
+        stdout: test/out/print.txt
