--- a/ccino.yml
+++ b/ccino.yml
@@ -1,40 +1,50 @@
-defaults:
-    mirror: true
-    stdout_mirror: true
+# defaults:
+#     mirror: true
+#     stdout_mirror: true
+#
+# tests:
+#     -
+#         # Test the first section of basic functionality.
+#         #
+#         # Limtied to basic use of suite(), test(), and the debug
+#         # reporter.
+#
+#         source: test/core/test-primary.py
+#         reporter: debug
+#         bail: true
+#         out: test/core/out/primary-report.txt
+#         stdout: test/core/out/primary-print.txt
+#     -
+#         # Test the second section of basic functionality.
+#         #
+#         # These tests finishing testing all components needed to run the
+#         # rest of the ccino tests. No tests after this point should use
+#         # components not tested here.
+#         #
+#         # Only suite(), test(), and the debug reporter can be used from
+#         # the primary tests.
+#
+#         source: test/core/test-secondary.py
+#         reporter: debug
+#         bail: true
+#         out: test/core/out/secondary-report.txt
+#         stdout: test/core/out/secondary-print.txt
+#     -
+#         # Test all other features given what has been tested above.
+#
+#         source: test
+#         exclude:
+#             - core/**
+#         reporter: default
+#         out: test/out/report.txt
+#         stdout: test/out/print.txt
 
-tests:
-    -
-        # Test the first section of basic functionality.
-        #
-        # Limtied to basic use of suite(), test(), and the debug
-        # reporter.
+# Limit to only primary tests for now
 
-        source: test/core/test-primary.py
-        reporter: debug
-        bail: true
-        out: test/core/out/primary-report.txt
-        stdout: test/core/out/primary-print.txt
-    -
-        # Test the second section of basic functionality.
-        #
-        # These tests finishing testing all components needed to run the
-        # rest of the ccino tests. No tests after this point should use
-        # components not tested here.
-        #
-        # Only suite(), test(), and the debug reporter can be used from
-        # the primary tests.
-
-        source: test/core/test-secondary.py
-        reporter: debug
-        bail: true
-        out: test/core/out/secondary-report.txt
-        stdout: test/core/out/secondary-print.txt
-    -
-        # Test all other features given what has been tested above.
-
-        source: test
-        exclude:
-            - core/**
-        reporter: default
-        out: test/out/report.txt
-        stdout: test/out/print.txt
+source: test/core/test-primary.py
+reporter: debug
+bail: true
+out: test/core/out/primary-report.txt
+mirror: true
+stdout: test/core/out/primary-print.txt
+stdout_mirror: true
