--- a/ccino.yml
+++ b/ccino.yml
@@ -9,7 +9,7 @@
 #         # Limtied to basic use of suite(), test(), and the debug
 #         # reporter.
 #
-#         source: test/core/test-primary.py
+#         source: test/core/test_primary.py
 #         reporter: debug
 #         bail: true
 #         out: test/core/out/primary-report.txt
@@ -24,7 +24,7 @@
 #         # Only suite(), test(), and the debug reporter can be used from
 #         # the primary tests.
 #
-#         source: test/core/test-secondary.py
+#         source: test/core/test_secondary.py
 #         reporter: debug
 #         bail: true
 #         out: test/core/out/secondary-report.txt
@@ -41,7 +41,7 @@
 
 # Limit to only primary tests for now
 
-source: test/core/test-primary.py
+source: test/core/test_primary.py
 reporter: debug
 bail: true
 out: test/core/out/primary-report.txt
